fixing all the frontend and backend issues 2